Added Pala-Block Added Pala-Structure Added Pala-ingot Added Pala-Creative tab

--- a/src/main/resources/assets/pala_mod/lang/en_us.json
+++ b/src/main/resources/assets/pala_mod/lang/en_us.json
@@ -1,3 +1,6 @@
 {
-  "item.pala_mod.hammer": "Hammer"
+  "item.pala_mod.palaingot": "Paladium ingot",
+  "item.pala_mod.hammer": "Hammer",
+  "itemGroup.tabpaladium": "Paladium",
+  "block.pala_mod.palablock": "Palablock"
 }
