New things (ask me on discord or check by yourself )

--- a/src/main/resources/assets/pala_mod/lang/en_us.json
+++ b/src/main/resources/assets/pala_mod/lang/en_us.json
@@ -1,5 +1,7 @@
 {
   "item.pala_mod.palaingot": "Paladium ingot",
+  "item.pala_mod.palasoldier_spawn_egg": "Palasoldier Spawn Egg",
+  "entity.pala_mod.palasoldier": "Palasoldier",
   "itemGroup.tabpaladium": "Paladium",
   "block.pala_mod.palablock": "Palablock"
 }
