--- a/src/main/resources/assets/pala_mod/lang/en_us.json
+++ b/src/main/resources/assets/pala_mod/lang/en_us.json
@@ -1,3 +1,7 @@
 {
-  "item.pala_mod.hammer": "Hammer"
+  "item.pala_mod.palatools_pickaxe": "Palatools Pickaxe",
+  "item.pala_mod.hammer": "Hammer",
+  "item.pala_mod.palatools_sword": "Palatools Sword",
+  "item.pala_mod.pala_dimension": "Pala Dimension Portal Igniter",
+  "block.pala_mod.c": "C"
 }
