--- a/src/main/resources/assets/pala_mod/lang/en_us.json
+++ b/src/main/resources/assets/pala_mod/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.pala_mod.hammer": "Hammer"
+  "item.pala_mod.hammer": "Hammer",
+  "key.pala_mod.credits_keybinding": "Credits Keybinding"
 }
