--- a/src/main/resources/assets/pala_mod/lang/en_us.json
+++ b/src/main/resources/assets/pala_mod/lang/en_us.json
@@ -1,4 +1,18 @@
 {
+  "item.pala_mod.palaingot": "Paladium ingot",
   "item.pala_mod.hammer": "Hammer",
-  "key.pala_mod.credits_keybinding": "Credits Keybinding"
+  "item.pala_mod.palatools_sword": "Palatools Sword",
+  "item.pala_mod.paladium_armor_armor_boots": "Paladium_armor Boots",
+  "key.pala_mod.credits_keybinding": "Credits Keybinding",
+  "itemGroup.tabpaladium": "Paladium Mod",
+  "item.pala_mod.palatools_hoe": "Palatools Hoe",
+  "block.pala_mod.palablock": "Palablock",
+  "item.pala_mod.palatools_shovel": "Palatools Shovel",
+  "item.pala_mod.paladium_armor_armor_helmet": "Paladium_armor Helmet",
+  "item.pala_mod.paladium_armor_armor_chestplate": "Paladium_armor Chestplate",
+  "item.pala_mod.palatools_pickaxe": "Palatools Pickaxe",
+  "item.pala_mod.palasoldier_spawn_egg": "FuzeIII Spawn Egg",
+  "entity.pala_mod.palasoldier": "FuzeIII",
+  "item.pala_mod.palatools_axe": "Palatools Axe",
+  "item.pala_mod.paladium_armor_armor_leggings": "Paladium_armor Leggings"
 }
